# servidor/licenca/src/main/java/br/com/licenca/entity/Usuario.java
@@ -1,0 +1,12 @@
+package br.com.licenca.entity;
+
+import lombok.AllArgsConstructor;
+import lombok.Getter;
+import lombok.Setter;
+
+@Getter
+@Setter
+@AllArgsConstructor
+public class Usuario {
+    private Integer id;
+}
